# my_autodock

./: backwards_patch_for_opennav_docking  package.xml  setup.cfg  setup.py  snippets
launch/: detect.launch.py  dock.launch.py  dock.launch.py.por  dock.launch.py.try1  lino.launch.py  navigation.launch.py
maps/: mymap.pgm  mymap.yaml  room_with_tags.pgm  room_with_tags.yaml
material/tag10/script/: tag.material
material/tag20/script/: tag.material
material/tag30/script/: tag.material
my_autodock/: detect_pose.py  detect_pose.py.new  detect_pose.py.old
params/: my_docking.yaml  my_docking2.yaml  my_docking_backward.yaml  my_docking_forward.yaml
rviz/: nav2_camera.rviz
worlds/: room_with_tags.sdf
