<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_autodock</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zealzel@todo.todo">zealzel</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>apriltag_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>opennav_docking_core</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
